--- a/PasswordManager/WebApplication/wwwroot/css/site.css
+++ b/PasswordManager/WebApplication/wwwroot/css/site.css
@@ -69,3 +69,10 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+
+.login-page {
+    display: flex;
+    justify-content:center;
+    align-items:center;
+}
