--- a/PasswordManager/WebApplication/Views/Shared/_Layout.cshtml
+++ b/PasswordManager/WebApplication/Views/Shared/_Layout.cshtml
@@ -27,6 +27,11 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <button>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Deconnexion">Deconnexion</a>
+                            </button>   
+                        </li>
                     </ul>
                 </div>
             </div>
