--- a/PasswordManager/WebApplication/Views/Account/Accounts.cshtml
+++ b/PasswordManager/WebApplication/Views/Account/Accounts.cshtml
@@ -4,8 +4,28 @@
     ViewBag.Title = "Accounts";
     var accounts = ViewBag.Accounts;
     var categories = ViewBag.Categories;
+    var id = ViewBag.Id;
 }
 
+<style>
+    th, td {
+        width: 20%;
+        vertical-align: middle !important;
+    }
+
+    .dropdown-text {
+        position: absolute;
+        width: 75%;
+        border-top-right-radius: 0;
+        border-bottom-right-radius: 0;
+    }
+
+    .hidetext {
+        -webkit-text-security: disc;
+    }
+</style>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script>
     function deleteAccount(itemId) {
         if (confirm("Are you sure you want to delete this account?"))
@@ -16,10 +36,49 @@
                 data: { 'id': itemId },
                 cache: false,
                 success: function (result) {
-                    console.log(result);
                     window.location.href = '@(Url.Action("Accounts", "Account"))';
                 },
             });
+        }
+    }
+
+    function getAccount(itemId) {
+        $('#updateModal').on('show.bs.modal', function (e) {
+            $.ajax({
+                type: 'GET',
+                url: '@(Url.Action("GetById", "Account"))',
+                data: { 'id': itemId },
+                cache: false,
+                success: function (result) {
+                    var nameField = document.getElementById("updateName");
+                    var categoryField = document.getElementById("updateCategory");
+                    var loginField = document.getElementById("updateLogin");
+                    var passwordField = document.getElementById("updatePassword");
+                    var urlField = document.getElementById("updateUrl");
+
+                    nameField.value = result.name;
+                    categoryField.value = result.category;
+                    loginField.value = result.login;
+                    passwordField.value = result.password;
+                    urlField.value = result.url;
+                },
+            });
+        });
+    }
+
+    function selectDropdown(elt) {
+        elt.previousElementSibling.value = elt.options[elt.selectedIndex].text;
+    }
+
+    function showPassword() {
+        var elt = document.getElementsByClassName("hidetext");
+    }
+
+    function showInputPassword(elt) {
+        if (elt.previousElementSibling.type === "password") {
+            elt.previousElementSibling.type = "text";
+        } else {
+            elt.previousElementSibling.type = "password";
         }
     }
 </script>
@@ -40,10 +99,10 @@
                         <tr>
                             <td>@account.Name</td>
                             <td>@account.Login</td>
-                            <td>@account.Password</td>
-                            <td>@account.Url</td>
+                            <td class="hidetext">@account.Password</td>
+                            <td><a href="@account.Url">@account.Url</a></td>
                             <td>
-                                <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-xl">Edit</button>
+                                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#updateModal" onclick="getAccount(@account.Id)">Edit</button>
                                 <button type="button" class="btn btn-primary" onclick="deleteAccount(@account.Id)">Delete</button>
                             </td>
                         </tr>
@@ -51,7 +110,7 @@
                 }
                 <tr>
                     <td colspan="5">
-                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-xl">Add</button>
+                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addModal">Add</button>
                     </td>
                 </tr>
             </table>
@@ -65,27 +124,27 @@
                 <tr>
                     <td>@account.Name</td>
                     <td>@account.Login</td>
-                    <td>@account.Password</td>
+                    <td class="hidetext">@account.Password</td>
                     <td>@account.Url</td>
                     <td>
-                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-xl">Edit</button>
+                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#updateModal" onclick="getAccount(@account.Id)">Edit</button>
                         <button type="button" class="btn btn-primary" onclick="deleteAccount(@account.Id)">Delete</button>
                     </td>
                 </tr>
             }
             <tr>
                 <td colspan="5">
-                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-xl">Add</button>
+                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addModal">Add</button>
                 </td>
             </tr>
         </table>
     </div>
 
-    <div class="modal fade bd-example-modal-xl" tabindex="-1" role="dialog" aria-labelledby="myExtraLargeModalLabel" aria-hidden="true">
+    <div id="addModal" class="modal fade bd-example-modal-xl" tabindex="-1" role="dialog" aria-labelledby="myExtraLargeModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-xl modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Add an account</h5>
+                    <h5 class="modal-title">Add an account</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -100,8 +159,8 @@
                             </div>
                             <div class="form-group col">
                                 @Html.LabelFor(m => m.Category)
-                                @Html.TextBoxFor(m => m.Category, new { @id = "categoryTextbox", @class = "form-control", @style = "position:absolute;width:75%;border-top-right-radius:0;border-bottom-right-radius:0;" })
-                                @Html.DropDownListFor(m => m.Category, new SelectList(categories, "Id", "Name"), "", new { @class = "form-control", @onchange = "document.getElementById('categoryTextbox').value = this.options[this.selectedIndex].text;" })
+                                @Html.TextBoxFor(m => m.Category, new { @class = "form-control dropdown-text" })
+                                @Html.DropDownListFor(m => m.Category, new SelectList(categories, "Id", "Name"), "", new { @id = "categoryList", @class = "form-control", @onchange = "selectDropdown(this)" })
                             </div>
                         </div>
                         <div class="row">
@@ -111,7 +170,8 @@
                             </div>
                             <div class="form-group col">
                                 @Html.LabelFor(m => m.Password)
-                                @Html.TextBoxFor(m => m.Password, new { @class = "form-control" })
+                                @Html.PasswordFor(m => m.Password, new { @class = "form-control modal-password" })
+                                <input type="checkbox" onclick="showInputPassword(this)"> Show password
                             </div>
                         </div>
                         <div class="form-group">
@@ -122,6 +182,54 @@
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
                         <button type="submit" class="btn btn-primary">Add</button>
+                    </div>
+                }
+            </div>
+        </div>
+    </div>
+
+    <div id="updateModal" class="modal fade bd-example-modal-xl" tabindex="-1" role="dialog" aria-labelledby="myExtraLargeModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-xl modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Update an account</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                @using (Html.BeginForm("Update", "Account", FormMethod.Post))
+                {
+                    <div class="modal-body">
+                        <div class="row">
+                            <div class="form-group col">
+                                @Html.LabelFor(m => m.Name)
+                                @Html.TextBoxFor(m => m.Name, new { @id = "updateName", @class = "form-control" })
+                            </div>
+                            <div class="form-group col">
+                                @Html.LabelFor(m => m.Category)
+                                @Html.TextBoxFor(m => m.Category, new { @id = "updateCategory", @class = "form-control dropdown-text" })
+                                @Html.DropDownListFor(m => m.Category, new SelectList(categories, "Id", "Name"), "", new { @id = "updateCategoryList", @class = "form-control", @onchange = "selectDropdown(this)" })
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="form-group col">
+                                @Html.LabelFor(m => m.Login)
+                                @Html.TextBoxFor(m => m.Login, new { @id = "updateLogin", @class = "form-control" })
+                            </div>
+                            <div class="form-group col">
+                                @Html.LabelFor(m => m.Password)
+                                @Html.PasswordFor(m => m.Password, new { @id = "updatePassword", @class = "form-control modal-password" })
+                                <input type="checkbox" onclick="showInputPassword(this)"> Show password
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            @Html.LabelFor(m => m.Url)
+                            @Html.TextBoxFor(m => m.Url, new { @id = "updateUrl", @class = "form-control" })
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                        <button type="submit" class="btn btn-primary">Update</button>
                     </div>
                 }
             </div>
