--- a/PasswordManager/WebApplication/Views/Shared/_Layout.cshtml
+++ b/PasswordManager/WebApplication/Views/Shared/_Layout.cshtml
@@ -6,6 +6,8 @@
     <title>@ViewData["Title"] - WebApplication</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/js/bootstrap.js" />
+    <script type="text/javascript" src="~/lib/jquery/dist/jquery.js"></script>
 </head>
 <body>
     <header>
