--- a/PasswordManager/WebApplication/Views/Account/Accounts.cshtml
+++ b/PasswordManager/WebApplication/Views/Account/Accounts.cshtml
@@ -20,13 +20,37 @@
         border-bottom-right-radius: 0;
     }
 
+    .copyable:hover {
+        cursor: pointer;
+    }
+
     .hidetext {
         -webkit-text-security: disc;
+    }
+
+    .hidetext:hover {
+        cursor: pointer;
+        -webkit-text-security: none;
     }
 </style>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script>
+    function updateAccount(itemId) {
+        if (confirm("Are you sure you want to delete this account?"))
+        {
+            $.ajax({
+                type: 'DELETE',
+                url: '@(Url.Action("Delete", "Account"))',
+                data: { 'id': itemId },
+                cache: false,
+                success: function (result) {
+                    window.location.href = '@(Url.Action("Accounts", "Account"))';
+                },
+            });
+        }
+    }
+
     function deleteAccount(itemId) {
         if (confirm("Are you sure you want to delete this account?"))
         {
@@ -55,12 +79,15 @@
                     var loginField = document.getElementById("updateLogin");
                     var passwordField = document.getElementById("updatePassword");
                     var urlField = document.getElementById("updateUrl");
+                    var form = document.getElementById("updateForm");
 
                     nameField.value = result.name;
                     categoryField.value = result.category;
                     loginField.value = result.login;
                     passwordField.value = result.password;
                     urlField.value = result.url;
+
+                    form.action += '/' + itemId;
                 },
             });
         });
@@ -81,6 +108,10 @@
             elt.previousElementSibling.type = "password";
         }
     }
+
+    function copyToClipboard(value) {
+        navigator.clipboard.writeText(value)
+    }
 </script>
 
 <div>
@@ -98,8 +129,8 @@
                     {
                         <tr>
                             <td>@account.Name</td>
-                            <td>@account.Login</td>
-                            <td class="hidetext">@account.Password</td>
+                            <td><a class="copyable" onclick="copyToClipboard('@account.Login')">@account.Login</a></td>
+                            <td><a class="hidetext" onclick="copyToClipboard('@account.Password')">@account.Password</a></td>
                             <td><a href="@account.Url">@account.Url</a></td>
                             <td>
                                 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#updateModal" onclick="getAccount(@account.Id)">Edit</button>
@@ -123,11 +154,11 @@
             {
                 <tr>
                     <td>@account.Name</td>
-                    <td>@account.Login</td>
-                    <td class="hidetext">@account.Password</td>
-                    <td>@account.Url</td>
+                    <td><a class="copyable" onclick="copyToClipboard('@account.Login')">@account.Login</a></td>
+                    <td><a class="hidetext" onclick="copyToClipboard('@account.Password')">@account.Password</a></td>
+                    <td><a href="@account.Url">@account.Url</a></td>
                     <td>
-                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#updateModal" onclick="getAccount(@account.Id)">Edit</button>
+                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#updateModal" data-id="@account.Id" onclick="getAccount(@account.Id)">Edit</button>
                         <button type="button" class="btn btn-primary" onclick="deleteAccount(@account.Id)">Delete</button>
                     </td>
                 </tr>
@@ -197,7 +228,7 @@
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
-                @using (Html.BeginForm("Update", "Account", FormMethod.Post))
+                @using (Html.BeginForm("Update", "Account", FormMethod.Post, new { @id = "updateForm" } ))
                 {
                     <div class="modal-body">
                         <div class="row">
