[FIX]Fixed all elements

--- a/PasswordManager/WebApplication/Views/Account/Accounts.cshtml
+++ b/PasswordManager/WebApplication/Views/Account/Accounts.cshtml
@@ -169,7 +169,7 @@
         }
         <table class="table table-hover">
             <tr>
-                <th colspan="5">Other</th>
+                <th colspan="5">All elements</th>
             </tr>
             @foreach (var account in accounts)
             {
