--- a/PasswordManager/WebApplication/Views/Shared/_Layout.cshtml
+++ b/PasswordManager/WebApplication/Views/Shared/_Layout.cshtml
@@ -28,9 +28,12 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Bank" asp-action="Banks">Banks</a>
+                        </li>
+                        <li class="nav-item">
                             <button>
                                 <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Deconnexion">Deconnexion</a>
-                            </button>   
+                            </button>
                         </li>
                     </ul>
                 </div>
