--- a/PasswordManager/WebApplication/Views/User/Login.cshtml
+++ b/PasswordManager/WebApplication/Views/User/Login.cshtml
@@ -3,37 +3,55 @@
 @{
     ViewBag.Title = "Login";
 }
+<style>
+    .card-auth {
 
-<div class="login-page">
-    <h1>Log in</h1>
-    @using (Html.BeginForm("Login", "User", FormMethod.Post))
-    {
-        <table>
-            <tr>
-                <td>@Html.LabelFor(a => a.login)</td>
-                <td>@Html.TextBoxFor(a => a.login)</td>
-                <td>@Html.ValidationMessageFor(a => a.login)</td>
-            </tr>
-            <tr>
-                <td>
-                    @Html.LabelFor(a => a.password)
-                </td>
-                <td>
-                    @Html.PasswordFor(a => a.password)
-                </td>
-                <td>
-                    @Html.ValidationMessageFor(a => a.password)
-                </td>
-            </tr>
-            <tr>
-                <td></td>
-                <td>
-                    <input type="submit" value="Login" />
-                </td>
-                <td></td>
-            </tr>
-        </table>
+        box-shadow: 0px 4px 9px 16px rgba(0, 0, 0, 0.07);
+        border-radius: 24px;
+
     }
-    @Html.ActionLink("Sign Up", "Register", "User") 
+    img {
+        margin-top: 30px;
+        margin-bottom: 20px;
+    }
+    h1 {
+        margin-bottom: 50px;
+    }
 
+
+</style>
+<div class="container-fluid h-100 ">
+    <div class="row justify-content-center align-items-center h-100">
+        
+        <div class="col col-sm-7 col-md-7 col-lg-6 col-xl-7 card-auth">
+
+            <div class="text-center">
+                <img width="100px" height="100px" src="~/Images/locked.svg" />
+                <h1>Log in</h1>
+            </div>
+            @using (Html.BeginForm("Login", "User", FormMethod.Post))
+            {
+                <div class="form-group">
+                    @Html.TextBoxFor(a => a.login, new { @placeholder = "Username", @class = "form-control  form-control-lg" })
+                    @Html.ValidationMessageFor(a => a.login, "", new { @class = "text-danger" })
+                </div>
+
+                <div class="form-group">
+                    @Html.PasswordFor(a => a.password, new { @placeholder = "Password", @class = "form-control  form-control-lg" })
+
+                    @Html.ValidationMessageFor(a => a.password, "", new { @class = "text-danger" })
+                </div>
+                <div class="text-danger">
+                    @ViewBag.ErrorMessage
+                    </div>
+                <div class="form-group">
+                    <input type="submit" value="Login" class="btn btn-info btn-lg btn-block" />
+                </div>
+
+            }
+            <div class="text-center">
+                <p>Not a member? @Html.ActionLink("Sign Up", "Register", "User")</p>
+            </div>
+        </div>
+        </div>
 </div>
