--- a/PasswordManager/WebApplication/Views/User/Register.cshtml
+++ b/PasswordManager/WebApplication/Views/User/Register.cshtml
@@ -24,13 +24,13 @@
             </div>
             @using (Html.BeginForm("Register", "User", FormMethod.Post))
             {
-                <div class="form-group">
-                    @Html.TextBoxFor(a => a.email, new { @placeholder = "Email address", @class = "form-control  form-control-lg" })
-                    @Html.ValidationMessageFor(a => a.email, "", new { @class = "text-danger" })
-                    <div class="text-danger">
-                        @ViewBag.ErrorMessage
-                    </div>
-                </div>
+        <div class="form-group">
+            @Html.TextBoxFor(a => a.email, new { @placeholder = "Email address", @class = "form-control  form-control-lg" })
+            @Html.ValidationMessageFor(a => a.email, "", new { @class = "text-danger" })
+            <div class="text-danger">
+                @ViewBag.ErrorEmail
+            </div>
+        </div>
                 <div class="form-group">
                     @Html.TextBoxFor(a => a.login, new { @placeholder = "Username", @class = "form-control  form-control-lg" })
                     @Html.ValidationMessageFor(a => a.login, "", new { @class = "text-danger" })
