add layout navbar

--- a/PasswordManager/WebApplication/Views/Account/Accounts.cshtml
+++ b/PasswordManager/WebApplication/Views/Account/Accounts.cshtml
@@ -5,6 +5,7 @@
     var accounts = ViewBag.Accounts;
     var unattachedAccounts = ViewBag.Unattached;
     var categories = ViewBag.Categories;
+    Layout = "~/Views/Shared/Navbar.cshtml";
 }
 
 <style>
