--- a/PasswordManager/WebApplication/Views/Bank/Banks.cshtml
+++ b/PasswordManager/WebApplication/Views/Bank/Banks.cshtml
@@ -4,30 +4,55 @@
     ViewBag.Title = "Banks";
     var banks = ViewBag.Banks;
 }
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script>
-    function deleteAccount() {
-        if (confirm("Are you sure to delete this bank?")) {
-            var tr = $(this).parents('tr:first');
-            console.log(tr);
-            var ID = $(this).prop('id');
-            console.log();
-            //Deletes the record with ID sent below
-            $.post(
-                '/Banks/Delete/',
-                { ID: ID },
-                function (item) {
-                    tr.remove();
-                }, "json");
-            location.reload();
+    function deleteBank(itemId) {
+        console.log(itemId);
+        if (confirm("Are you sure you want to delete this credit card?"))
+        {
+            $.ajax({
+                type: 'DELETE',
+                url: '@(Url.Action("Delete", "Bank"))',
+                data: { 'id': itemId },
+                cache: false,
+                success: function (result) {
+                    window.location.href = '@(Url.Action("Banks", "Bank"))';
+                },
+            });
         }
-    });
+    }
+
+    function getBank(itemId) {
+        $.ajax({
+            type: 'GET',
+            url: '@(Url.Action("GetById", "Bank"))',
+            data: { 'id': itemId },
+            cache: false,
+            success: function (result) {
+                var nameField = document.getElementById("updateName");
+                var NumberCardField = document.getElementById("updateNumberCard");
+                var CvcField = document.getElementById("updateCvc");
+                var DateField = document.getElementById("updateDate");
+                var form = document.getElementById("updateForm");
+                console.log(result)
+
+                nameField.value = result.name;
+                NumberCardField.value = result.numberCard;
+                CvcField.value = result.cvc;
+                DateField.value = result.date;
+
+                form.action += '/' + itemId;
+            },
+        });
+    }
+
 </script>
 <div>
-    <h1 class="display-4">Accounts</h1>
+    <h1 class="display-4">Banks</h1>
     <div>
         <table class="table table-hover table-primary">
             <tr>
-                <th colspan="5">All elements</th>
+                <th colspan="5">All credit cards</th>
             </tr>
             @foreach (var bank in banks)
             {
@@ -37,18 +62,18 @@
                     <td>@bank.Date</td>
                     <td>@bank.Cvc</td>
                     <td>
-                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-xl">Edit</button>
-                        <button type="button" class="btn btn-primary" onclick="deleteBank()">Delete</button>
+                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#updateModal" onclick="getBank(@bank.Id)">Edit</button>
+                        <button type="button" class="btn btn-primary" onclick="deleteBank(@bank.Id)">Delete</button>
                     </td>
                 </tr>
             }
             <td colspan="5">
-                <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-xl">Add</button>
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addModal">Add</button>
             </td>
         </table>
     </div>
 
-    <div class="modal fade bd-example-modal-xl" tabindex="-1" role="dialog" aria-labelledby="myExtraLargeModalLabel" aria-hidden="true">
+    <div id="addModal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog modal-xl modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
@@ -84,6 +109,47 @@
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
                         <button type="submit" class="btn btn-primary">Add</button>
+                    </div>
+                }
+            </div>
+        </div>
+    </div>
+    <div id="updateModal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog modal-xl modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Update a credit card</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                @using (Html.BeginForm("Update", "Bank", FormMethod.Post, new { @id = "updateForm" }))
+                {
+                    <div class="modal-body">
+                        <div class="row">
+                            <div class="form-group col">
+                                @Html.LabelFor(m => m.Name)
+                                @Html.TextBoxFor(m => m.Name, new { @id = "updateName", @class = "form-control" })
+                            </div>
+                            <div class="form-group col">
+                                @Html.LabelFor(m => m.NumberCard)
+                                @Html.TextBoxFor(m => m.NumberCard, new { @id = "updateNumberCard", @class = "form-control" })
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="form-group col">
+                                @Html.LabelFor(m => m.Cvc)
+                                @Html.TextBoxFor(m => m.Cvc, new { @id = "updateCvc", @class = "form-control"})
+                            </div>
+                            <div class="form-group col">
+                                @Html.LabelFor(m => m.Date)
+                                @Html.TextBoxFor(m => m.Date, new { @id = "updateDate", @class = "form-control" })
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                        <button type="submit" class="btn btn-primary">Update</button>
                     </div>
                 }
             </div>
