[FIX] modal resolve and session

--- a/PasswordManager/WebApplication/Views/Shared/Navbar.cshtml
+++ b/PasswordManager/WebApplication/Views/Shared/Navbar.cshtml
@@ -1,5 +1,4 @@
-﻿
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -11,50 +10,64 @@
     <script type="text/javascript" src="~/lib/jquery/dist/jquery.js"></script>
 </head>
 <body>
-    <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" asp-controller="Account" asp-action="Accounts">
-                <img src="/Images/passmanager.svg" alt="" width="35" height="35" class="d-inline-block align-text-top">Password Manager
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" asp-controller="Account" asp-action="Accounts">Accounts</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="#">Bank</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="#">Generate a password</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Link
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
-                    </li>
+    <header>
+        <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" asp-controller="Account" asp-action="Accounts">
+                    <img src="/Images/passmanager.svg" alt="" width="35" height="35" class="d-inline-block align-text-top">Password Manager
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" asp-controller="Account" asp-action="Accounts">Accounts</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#">Bank</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#">Generate a password</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Link
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
+                                <li><a class="dropdown-item" href="#">Action</a></li>
+                                <li><a class="dropdown-item" href="#">Another action</a></li>
+                                <li><hr class="dropdown-divider"></li>
+                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            </ul>
+                        </li>
 
-                </ul>
+                    </ul>
 
-                <div class="d-flex">
+                    <div class="d-flex">
 
-                    <button class="btn btn-outline-danger" type="button" onclick="location.href='@Url.Action("Deconnexion", "User")'" > Log out </button>
+                        <button class="btn btn-outline-danger" type="button" onclick="location.href='@Url.Action("Deconnexion", "User")'"> Log out </button>
 
+                    </div>
                 </div>
             </div>
-        </div>
-    </nav>
+        </nav>
+    </header>
+
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
+
+    <footer class="border-top footer text-muted">
+        <div class="container">
+            &copy; 2021 - WebApplication - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        </div>
+    </footer>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
+    @RenderSection("Scripts", required: false)
 </body>
+</html>
